test: fix tests. Use TestcontainersConfiguration. Use constants